Fix spacing and sizing again

--- a/src/styles/_portal.scss
+++ b/src/styles/_portal.scss
@@ -4,12 +4,13 @@
 
 .door-float {
     float: left;
-    width: 40%;
-    padding: 5%;
+    width: 50%;
 
     @media only screen and (max-width: $cut) {
         float: none;
-        width: 80%;
+        margin: 5%;
+        margin-top: 0;
+        width: 90%;
     }
 };
 
@@ -19,17 +20,22 @@
     height: 50%;
 
     img {
-        width: 600px;
+        width: 94%;
         height: auto;
-        max-width: 100%;
-        max-height: auto;
-        margin-left: 10%;
+        margin: 3%;
+        margin-bottom: 5%;
+
+        @media only screen and (max-width: $cut) {
+            width: 100%;
+            margin: 0;
+        }
 
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
     img:hover {
-        transform: scale(1.2);
+        transform: scale(1.05);
+        margin-bottom: 0%;
     }
 
     h2 {
