--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,6 +1,6 @@
 $main: #1a222c;
 $mainbg: url("/assets/img/DSC_0031.JPG");
-$contentbg: url("/assets/img/DSC02798.JPG");
+$contentbg: url("/assets/img/DSC04026.JPG");
 $sec: #4B5664;
 $purple: #54516A;
 $cut: 750px;
